add upload icon for create task

--- a/scripts/view/dashboard/tasks/create_task.html
+++ b/scripts/view/dashboard/tasks/create_task.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="form-group">
-            <a href="#" class="btn-link" onclick="return add_attachment();">上传附件</a>
+            <a href="#" class="btn-link" onclick="return add_attachment();"><i class="fa fa-upload mr-1"></i>上传附件</a>
             <div id="form-attachments" data-counter="0"></div>
         </div>
 
