--- a/scripts/view/user/profile/index.html
+++ b/scripts/view/user/profile/index.html
@@ -2,7 +2,11 @@
     <div class="text-center">
         <img id="profile-avatar" src="{{session.avatar}}" width="80px" height="80px" class="rounded-circle mb-2" data-toggle="modal" data-target="#mdl-mod-avatar">
         <div id="profile-name">
+            {% if config.app.enable_rename == 'yes' then %}
             <h3>{{session.name}}<sup><i class="fa fa-pencil-square-o ml-1 btn-link" onclick="return open_edit_name();"></i></sup></h3>
+            {% else %}
+            <h3>{{session.name}}</h3>
+            {% end %}
         </div>
         
         <p class="text-muted">{{session.account}}</p>
