--- a/www/css/site.css
+++ b/www/css/site.css
@@ -91,6 +91,30 @@
     overflow: auto;
 }
 
+/* Document toc */
+.document-toc {
+    position: absolute;
+    display: block;
+    left: 0;
+    width: 250px;
+    top: 64px;
+    bottom: 0;
+    margin: 0;
+    overflow: auto;
+}
+
+/* Document view */
+.document-view {
+    position: absolute;
+    display: block;
+    left: 250px;
+    right: 0;
+    top: 64px;
+    bottom: 0;
+    margin: 0;
+    overflow: auto;
+}
+
 /* Task view panel */
 .task-view-pane {
     position:absolute;
