--- a/www/css/site.css
+++ b/www/css/site.css
@@ -97,9 +97,10 @@
     display: block;
     left: 0;
     width: 250px;
-    top: 64px;
+    top: 0;
     bottom: 0;
     margin: 0;
+    font-size: .9em;
     overflow: auto;
 }
 
@@ -109,7 +110,7 @@
     display: block;
     left: 250px;
     right: 0;
-    top: 64px;
+    top: 0;
     bottom: 0;
     margin: 0;
     overflow: auto;
