add title for document's index

--- a/scripts/view/dashboard/documents/index.html
+++ b/scripts/view/dashboard/documents/index.html
@@ -207,6 +207,7 @@ $('#treeview').jstree({
             + '<tr><td class="bg-dark">作者</td><td class="bg-success">' + ret.author + '</td></tr>'
             + '<tr><td class="bg-dark">更新</td><td class="bg-success">' + ret.modify_user + '</td></tr>'
             + '<tr><td class="bg-dark">时间</td><td class="bg-success">' + ret.last_modify + '</td></tr></tbody></table>'
+            + '<i class="fa fa-list mr-2"></i><label class="title">章节目录</label>'
             + '<ul class="md-toc"></ul></div>'
             + '<div class="document-view md-preview mt-1 pt-2 pl-4">' + marked(ret.content || '') + '</div>';
 
